--- a/v2.0-IoT/.project
+++ b/v2.0-IoT/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ESP_Version_3_3</name>
+	<name>Version_IoT</name>
 	<comment></comment>
 	<projects>
 	</projects>
