--- a/v2.0-IoT/Debug/makefile
+++ b/v2.0-IoT/Debug/makefile
@@ -38,34 +38,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := ESP_Version_3_3
+BUILD_ARTIFACT_NAME := Version_IoT
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-ESP_Version_3_3.elf \
+Version_IoT.elf \
 
 MAP_FILES += \
-ESP_Version_3_3.map \
+Version_IoT.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-ESP_Version_3_3.list \
+Version_IoT.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: ESP_Version_3_3.elf secondary-outputs
+main-build: Version_IoT.elf secondary-outputs
 
 # Tool invocations
-ESP_Version_3_3.elf ESP_Version_3_3.map: $(OBJS) $(USER_OBJS) C:\Users\hidir\STM32CubeIDE\workspace_1.13.0\ESP_Version_3_3\STM32F103RCTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "ESP_Version_3_3.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\hidir\STM32CubeIDE\workspace_1.13.0\ESP_Version_3_3\STM32F103RCTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ESP_Version_3_3.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Version_IoT.elf Version_IoT.map: $(OBJS) $(USER_OBJS) C:\Users\hidir\Documents\GitHub\ondergrup-stm32\v2.0-IoT\STM32F103RCTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Version_IoT.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\hidir\Documents\GitHub\ondergrup-stm32\v2.0-IoT\STM32F103RCTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Version_IoT.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -74,14 +74,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-ESP_Version_3_3.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "ESP_Version_3_3.list"
+Version_IoT.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "Version_IoT.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) ESP_Version_3_3.elf ESP_Version_3_3.list ESP_Version_3_3.map default.size.stdout
+	-$(RM) Version_IoT.elf Version_IoT.list Version_IoT.map default.size.stdout
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
