--- a/v1.0/Debug/makefile
+++ b/v1.0/Debug/makefile
@@ -1,6 +1,6 @@
 ################################################################################
 # Automatically-generated file. Do not edit!
-# Toolchain: GNU Tools for STM32 (11.3.rel1)
+# Toolchain: GNU Tools for STM32 (12.3.rel1)
 ################################################################################
 
 -include ../makefile.init
@@ -60,8 +60,8 @@ all: main-build
 main-build: ESP_Version_3_3.elf secondary-outputs
 
 # Tool invocations
-ESP_Version_3_3.elf ESP_Version_3_3.map: $(OBJS) $(USER_OBJS) C:\Users\hidir\Documents\GitHub\ondergrup-stm32\v1.0\STM32F103RCTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "ESP_Version_3_3.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\hidir\Documents\GitHub\ondergrup-stm32\v1.0\STM32F103RCTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ESP_Version_3_3.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+ESP_Version_3_3.elf ESP_Version_3_3.map: $(OBJS) $(USER_OBJS) /Users/hidirektor/Documents/GitHub/ondergrup-stm32/v1.0/STM32F103RCTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "ESP_Version_3_3.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"/Users/hidirektor/Documents/GitHub/ondergrup-stm32/v1.0/STM32F103RCTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ESP_Version_3_3.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
