--- a/v2.0-IoT/Debug/makefile
+++ b/v2.0-IoT/Debug/makefile
@@ -66,8 +66,8 @@ all: main-build
 main-build: Version_IoT.elf secondary-outputs
 
 # Tool invocations
-Version_IoT.elf Version_IoT.map: $(OBJS) $(USER_OBJS) /Users/hidirektor/Documents/GitHub/ondergrup-stm32/v2.0-IoT/STM32F103RCTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Version_IoT.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"/Users/hidirektor/Documents/GitHub/ondergrup-stm32/v2.0-IoT/STM32F103RCTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Version_IoT.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Version_IoT.elf Version_IoT.map: $(OBJS) $(USER_OBJS) C:\Users\hidir\Documents\GitHub\ondergrup-stm32\v2.0-IoT\STM32F103RCTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Version_IoT.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\hidir\Documents\GitHub\ondergrup-stm32\v2.0-IoT\STM32F103RCTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Version_IoT.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
